<resources>
    <string name="app_name">LecheYMielGanado</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ganaderia_leche_y_miel">Ganaderia Leche Y Miel</string>
    <string name="iniciar_seccion">Iniciar Seccion</string>
    <string name="registrar_usuario">Registrar Usuario</string>
    <string name="mail">Email</string>
    <string name="nombre">Nombre</string>
    <string name="password">Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="registrate">registrate</string>
    <string name="no_tienes_cuenta">no tienes cuenta?</string>
    <string name="recordarme">Recordarme</string>
    <string name="nombre_finca">Nombre Finca</string>
    <string name="code">Codigo:</string>
    <string name="gender">Genero</string>
    <string name="gender_field">Genero:</string>
    <string name="age">Edad:</string>
    <string name="characs">Carateristicas:</string>
    <string name="add">Añadir Ganado</string>
    <string name="charac">Caracteristicas</string>
    <string name="color">Color</string>
    <string name="color_field">Color:</string>
    <string name="edad">Edad</string>
    <string name="name">Nombre</string>
    <string name="status">Estado</string>
    <string name="born_here">Nacio en la finca</string>
    <string name="born_date">fecha de nacimiento</string>
    <string name="years">Años</string>
    <string name="months">Meses</string>
</resources>
