<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.RegisterCattleActivity">
    <data>
        <variable
            name="viewModel"
            type="com.personal.ncasilla.lecheymielganado.viewmodels.RegisterCattleViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/cattel_image"
                    android:layout_width="match_parent"
                    android:layout_height="212dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitCenter"
                    android:layout_marginTop="24dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="24dp">

                    <com.google.android.material.textfield.TextInputEditText

                        android:id="@+id/cattel_name"
                        android:text="@={viewModel.nameId}"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:lines="1"
                        android:nextFocusDown="@id/cow_gender_spinner"
                        android:hint="@string/name" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cow_gender_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="24dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/gender"/>
                    <Spinner
                        android:id="@+id/cow_gender_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:selectedItemPosition="@={viewModel.genders}"
                        android:onItemSelected="@{(parent, view, pos, id)->viewModel.onItemSelected(parent, view, pos, id)}"
                        android:layout_marginTop="24dp"
                        android:entries="@array/genders"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cow_status_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="24dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/status"/>
                    <Spinner
                        android:id="@+id/cow_status_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:selectedItemPosition="@={viewModel.status}"
                        android:onItemSelected="@{(parent, view, pos, id)->viewModel.onItemSelected(parent, view, pos, id)}"
                        android:layout_marginTop="24dp"
                        android:entries="@array/status"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="24dp"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/born_here"/>
                    <Spinner
                        android:id="@+id/cow_bornhere_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:selectedItemPosition="@={viewModel.bornHere}"
                        android:onItemSelected="@{(parent, view, pos, id)->viewModel.onItemSelected(parent, view, pos, id)}"
                        android:layout_marginTop="24dp"
                        android:entries="@array/bornHere"/>
                </com.google.android.material.textfield.TextInputLayout>



                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cattel_age_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="24dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/age"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <Spinner
                            android:id="@+id/cow_year_spinner"
                            android:selectedItemPosition="@={viewModel.year}"
                            android:onItemSelected="@{(parent, view, pos, id)->viewModel.onItemSelected(parent, view, pos, id)}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:text="@string/years"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <Spinner
                            android:id="@+id/cow_months_spinner"
                            android:selectedItemPosition="@={viewModel.month}"
                            android:onItemSelected="@{(parent, view, pos, id)->viewModel.onItemSelected(parent, view, pos, id)}"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:text="@string/months"
                            android:textSize="16sp"
                            android:textColor="@android:color/black"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cow_date_picker_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="24dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/born_date"/>

                    <com.personal.ncasilla.lecheymielganado.util.CustomDatePicker
                        android:id="@+id/cow_date_picker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cattel_color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.color}"
                        android:nextFocusDown="@id/cattel_extra_data"
                        android:lines="1"
                        android:hint="@string/color" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginTop="24dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/cattel_extra_data"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@={viewModel.characteristic}"
                        android:hint="@string/charac"
                        android:lines="5" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/add_cow_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="24dp"
                    android:text="@string/add" />

            </LinearLayout>

            <ProgressBar
                android:id="@+id/progress_bar_register"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                android:layout_centerInParent="true"/>

        </RelativeLayout>


    </ScrollView>
</layout>